PR: Melhorias + Nova arquitetura